--- a/visualizer/templates/index.html
+++ b/visualizer/templates/index.html
@@ -96,6 +96,15 @@
                 <div class="stack-view" id="stackView">
                     <!-- Stack will be populated here -->
                 </div>
+
+                <!-- Output -->
+                <div class="panel-header">
+                    <h2>Salida del Programa</h2>
+                    <button id="clearOutputBtn" class="btn btn-secondary" style="padding: 5px 10px; font-size: 0.8em;">Limpiar</button>
+                </div>
+                <div class="output-view" id="outputView">
+                    <pre id="programOutput"></pre>
+                </div>
             </div>
         </div>
 
